compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__type_invalid_constructor_arg.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1284
expression: "\ntype A {\n    A(type: String)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type A {
    A(type: String)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:7
  │
3 │     A(type: String)
  │       ^^^^ I was not expecting this

Found the keyword `type`, expected one of: 
- `)`
- a constructor argument name
